[project]
name = "safe-6g-kafkabroker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gbatsis", email = "gbatsis@ahedd.demokritos.gr" }
]
dependencies = [
    "mkdocs-material>=9.5.50",
    "mkdocstrings-python>=1.13.0",
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "kafka-python>=2.0.6",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/safe_6g_kafkabroker"]
